# EmbeddedScripting

./: CMakeLists.txt  GenerateEmeddedSource.cmake  main.cpp
